--- a/themes/sports-on-campus/sass/_page-templates.scss
+++ b/themes/sports-on-campus/sass/_page-templates.scss
@@ -395,6 +395,7 @@ button[type='submit'] {
   .entry-title {
     margin-top: 1em;
     font-size: 1.6em;
+    text-transform: uppercase;
   }
   .entry-content {
     p {
